ingress/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      run: web

  template:
    metadata:
      labels:
        run: web
    spec:
       containers:
       - image: gcr.io/google-samples/hello-app:1.0
         imagePullPolicy: IfNotPresent
         name: web
         ports:
         - containerPort: 8080
           protocol: TCP     



---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
